# disko-without-nix

./: Cargo.toml  README.md  flake.nix  generate-test-data.nix  snapshot-tests.nix
examples/: boot-raid1.json  boot-raid1.sh  btrfs-subvolumes.json  btrfs-subvolumes.sh  complex.json  complex.sh  config.json  gpt-bios-compat.json  gpt-bios-compat.sh  luks-lvm.json  luks-lvm.sh  lvm-raid.json  lvm-raid.sh  mdadm.json  mdadm.sh  multi-device-no-deps.json  multi-device-no-deps.sh  negative-size.json  negative-size.sh  simple-efi.json  swap.json  swap.sh  tmpfs.json  tmpfs.sh  with-lib.json  zfs-over-legacy.json  zfs-over-legacy.sh  zfs.json  zfs.sh
src/: btrfs.rs  create.rs  device.rs  disk.rs  lib.rs  luks.rs  lvm.rs  main.rs  mdadm.rs  nodev.rs  partition.rs  swap.rs  zfs.rs
tests/: snapshot_tests.rs
